--- a/package.json
+++ b/package.json
@@ -25,7 +25,13 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "jest": "29.6.2",
-    "prettier": "^2.8.8"
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-typescript": "^7.27.1",
+    "@types/jest": "^29.5.14",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.5.14",
+    "prettier": "^3.5.3",
+    "ts-jest": "^29.3.2"
   }
 }
