--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "dev": "next dev"
   },
   "repository": {
     "type": "git",
@@ -24,14 +25,19 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
+  "jest": {
+    "testPathIgnorePatterns": [".next", "node_modules"]
+  },
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-typescript": "^7.27.1",
     "@types/jest": "^29.5.14",
+    "@types/react": "19.1.3",
     "babel-jest": "^29.7.0",
     "jest": "^29.5.14",
     "prettier": "^3.5.3",
-    "ts-jest": "^29.3.2"
+    "ts-jest": "^29.3.2",
+    "typescript": "5.8.3"
   }
 }
