--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "Learning with curso.dev",
   "main": "index.js",
   "scripts": {
-    "lint:check": "prettier --check .",
+    "services:up": "docker compose -f infra/compose.yaml up",
+    "services:down": "docker compose -f infra/compose.yaml down",
+    "services:stop": "docker compose -f infra/compose.yaml stop",
+    "services:start": "docker compose -f infra/compose.yaml up -d",
+    "services:update": "docker compose -f infra/compose.yaml up --build",
+    "lint": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
     "test:watch": "jest --watch",
-    "dev": "next dev"
+    "dev": "npm run services:start && next dev"
   },
   "repository": {
     "type": "git",
@@ -22,17 +27,22 @@
   "homepage": "https://github.com/JDaniloC/TabNews#readme",
   "dependencies": {
     "next": "^14.2.26",
+    "pg": "8.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "jest": {
-    "testPathIgnorePatterns": [".next", "node_modules"]
+    "testPathIgnorePatterns": [
+      ".next",
+      "node_modules"
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-typescript": "^7.27.1",
     "@types/jest": "^29.5.14",
+    "@types/pg": "^8.15.1",
     "@types/react": "19.1.3",
     "babel-jest": "^29.7.0",
     "jest": "^29.5.14",
