--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,7 @@
+POSTGRES_DB=campspotter
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+
 DATABASE_NAME=campspotter
 DATABASE_USER=postgres
 DATABASE_PASSWORD=password
